--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -102,21 +102,19 @@ bind-key -T copy-mode-vi M-l resize-pane -R 4
 # bind-key S-C-Up copy-mode\;\
 #            send-keys -X start-of-line\;\
 #            send-keys -X search-backward "󰇙"
-bind-key b {
-    copy-mode
-    send-keys -X clear-selection
-    send-keys -X cursor-up
-    send-keys -X start-of-line
-    send-keys -X search-backward "󰇙"
-    send-keys -X cursor-down
-    send-keys -X start-of-line
-send-keys -X begin-selection
-    send-keys -X search-forward "󰇙"
-    send-keys -X cursor-up
-    send-keys -X cursor-up
-    send-keys -X end-of-line
+bind-key b copy-mode \; \
+    send-keys -X clear-selection \; \
+    send-keys -X cursor-up \; \
+    send-keys -X start-of-line \; \
+    send-keys -X search-backward "󰇙" \; \
+    send-keys -X cursor-down \; \
+    send-keys -X start-of-line \; \
+    send-keys -X begin-selection \; \
+    send-keys -X search-forward "󰇙" \; \
+    send-keys -X cursor-up \; \
+    send-keys -X cursor-up \; \
+    send-keys -X end-of-line \; \
     send-keys -X stop-selection
-}
 
 # theme (using our own)
 # set -g @plugin 'egel/tmux-gruvbox'
@@ -125,12 +123,10 @@ send-keys -X begin-selection
 # dark-notify themes
 set -g @plugin 'erikw/tmux-dark-notify'
 # TODO: source dark one by default
-set -g @dark-notify-theme-path-light '~/tmux-gruvbox-light.conf'
-set -g @dark-notify-theme-path-dark '~/tmux-gruvbox-dark.conf'
-
-# Treemux
-set -g @treemux-tree-nvim-init-file '~/.tmux/plugins/treemux/configs/treemux_init.lua'
-set -g @plugin 'kiyoon/treemux'
+set -g @dark-notify-theme-path-light '$HOME/.tmux/tmux-gruvbox-light.conf'
+set -g @dark-notify-theme-path-dark '$HOME/.tmux/tmux-gruvbox-dark.conf'
+# mode indicator
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 
 # override any plugin based mappings
 # window splitting
@@ -149,8 +145,8 @@ unbind C-x
 # set-window-option -g window-active-style bg=terminal
 # set-window-option -g window-style bg=black
 
+if-shell "test -e ~/.local/state/tmux/tmux-dark-notify-theme.conf" \
+    "source-file ~/.local/state/tmux/tmux-dark-notify-theme.conf"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-if-shell "test -e ~/.local/state/tmux/tmux-dark-notify-theme.conf" \
-     "source-file ~/.local/state/tmux/tmux-dark-notify-theme.conf"
