--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -116,18 +116,6 @@ bind-key b copy-mode \; \
     send-keys -X end-of-line \; \
     send-keys -X stop-selection
 
-# theme (using our own)
-# set -g @plugin 'egel/tmux-gruvbox'
-# set -g @tmux-gruvbox 'dark' # or 'light'
-
-# dark-notify themes
-set -g @plugin 'erikw/tmux-dark-notify'
-# TODO: source dark one by default
-set -g @dark-notify-theme-path-light '$HOME/.tmux/tmux-gruvbox-light.conf'
-set -g @dark-notify-theme-path-dark '$HOME/.tmux/tmux-gruvbox-dark.conf'
-# mode indicator
-set -g @plugin 'MunifTanjim/tmux-mode-indicator'
-
 # override any plugin based mappings
 # window splitting
 unbind h
@@ -142,9 +130,20 @@ bind-key z resize-pane -Z
 unbind C-x
 
 # Tmux pane fading when not in focus
-# set-window-option -g window-active-style bg=terminal
-# set-window-option -g window-style bg=black
+set-window-option -g window-active-style bg=terminal
+set-window-option -g window-style bg=black
 
+# mode indicator used in the theme
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+
+# dark-notify themes
+set -g @plugin 'erikw/tmux-dark-notify'
+set -g @dark-notify-theme-path-light '$HOME/.tmux/tmux-gruvbox-light.conf'
+set -g @dark-notify-theme-path-dark '$HOME/.tmux/tmux-gruvbox-dark.conf'
+# dark by default
+if-shell "test ! -e ~/.local/state/tmux/tmux-dark-notify-theme.conf" \
+    "source-file '$HOME/.tmux/tmux-gruvbox-dark.conf"
+# dark notify theme is it was triggered
 if-shell "test -e ~/.local/state/tmux/tmux-dark-notify-theme.conf" \
     "source-file ~/.local/state/tmux/tmux-dark-notify-theme.conf"
 
