--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -142,7 +142,7 @@ set -g @dark-notify-theme-path-light '$HOME/.tmux/tmux-gruvbox-light.conf'
 set -g @dark-notify-theme-path-dark '$HOME/.tmux/tmux-gruvbox-dark.conf'
 # dark by default
 if-shell "test ! -e ~/.local/state/tmux/tmux-dark-notify-theme.conf" \
-    "source-file '$HOME/.tmux/tmux-gruvbox-dark.conf"
+    "source-file $HOME/.tmux/tmux-gruvbox-dark.conf"
 # dark notify theme is it was triggered
 if-shell "test -e ~/.local/state/tmux/tmux-dark-notify-theme.conf" \
     "source-file ~/.local/state/tmux/tmux-dark-notify-theme.conf"
