--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -135,6 +135,7 @@ set-window-option -g window-style bg=black
 
 # mode indicator used in the theme
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+set -g @plugin 'xamut/tmux-weather'
 
 # dark-notify themes
 set -g @plugin 'erikw/tmux-dark-notify'
