Adding wind to the weather

--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -136,6 +136,7 @@ set-window-option -g window-style bg=black
 # mode indicator used in the theme
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'xamut/tmux-weather'
+set-option -g @tmux-weather-format "%c+%t+%w"
 
 # dark-notify themes
 set -g @plugin 'erikw/tmux-dark-notify'
