Tmux themes tweaks

--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -131,7 +131,8 @@ unbind C-x
 
 # Tmux pane fading when not in focus
 set-window-option -g window-active-style bg=terminal
-set-window-option -g window-style bg=black
+# this is set in the theme to match nvim background light or dark
+# set-window-option -g window-style bg=colour237
 
 # mode indicator used in the theme
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
