--- a/stow/tmux/.tmux/tmux-gruvbox-light.conf
+++ b/stow/tmux/.tmux/tmux-gruvbox-light.conf
@@ -53,5 +53,8 @@ set-option -g status-right "#[bg=colour252,fg=colour243,nobold,nounderscore,noit
 set-window-option -g window-status-current-format "#[bg=colour215,fg=colour252,nobold,noitalics,nounderscore]#[bg=colour215,fg=colour239] #I #[bg=colour215,fg=colour239,bold] #W#{?window_zoomed_flag,*Z,} #[bg=colour252,fg=colour215,nobold,noitalics,nounderscore]"
 set-window-option -g window-status-format "#[bg=colour249,fg=colour252,noitalics]#[bg=colour249,fg=colour241] #I #[bg=colour249,fg=colour241] #W #[bg=colour252,fg=colour249,noitalics]"
 
+# for non active tmux window
+set-window-option -g window-style bg=colour252
+
 # Initialize TMUX plugin manager for dark-notify trigger to make plugins work with dark/light themes
 run '~/.tmux/plugins/tpm/tpm'
