--- a/stow/ghostty/.config/ghostty/config
+++ b/stow/ghostty/.config/ghostty/config
@@ -2,10 +2,14 @@
 theme = dark:GruvboxDark,light:AtomOneLight
 font-family = Hack Nerd Font Mono Regular
 font-thicken = 1
+font-size = 16
 shell-integration = zsh
 
+# in bites, need 100mb 
+scrollback-limit = 104857600
+
 # opacity
-background-opacity = .7
+background-opacity = .9
 background-blur-radius = 20
 
 # view
