--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -134,6 +134,9 @@ set-window-option -g window-active-style bg=terminal
 # this is set in the theme to match nvim background light or dark
 # set-window-option -g window-style bg=colour237
 
+# prefix + ? default keybinding
+set -g @plugin 'roosta/tmux-fuzzback'
+
 # mode indicator used in the theme
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'xamut/tmux-weather'
