--- a/stow/yazi/.config/yazi/keymap.toml
+++ b/stow/yazi/.config/yazi/keymap.toml
@@ -126,7 +126,8 @@ keymap = [
 	# Goto
 	{ on = [ "g", "h" ],       run = "cd ~",             desc = "Go home" },
 	{ on = [ "g", "c" ],       run = "cd ~/.config",     desc = "Goto ~/.config" },
-	{ on = [ "g", "d" ],       run = "cd ~/Downloads",   desc = "Goto ~/Downloads" },
+	{ on = [ "g", "D" ],       run = "cd ~/Downloads",   desc = "Goto ~/Downloads" },
+	{ on = [ "g", "d" ],       run = "cd ~/dev",         desc = "Goto ~/dev" },
 	{ on = [ "g", "a" ],       run = "cd ~/Applications",   desc = "Goto /Applications" },
 	{ on = [ "g", "<Space>" ], run = "cd --interactive", desc = "Jump interactively" },
 	{ on = [ "g", "i", "i"],   run = "cd ~/dev/infrastructure",                          desc = "Goto ~/dev/infrastructure" },
