Finally works in wezterm, but not ghostty
https://github.com/ghostty-org/ghostty/issues/957

--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -65,6 +65,10 @@ bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
 bind -n M-0 select-window -t 10
 
+# option+tab to switch windows (remapped in the terminal app from C-Tab and C-Shift-Tab)
+bind -n M-Tab next-window
+bind -n M-~ previous-window
+
 # refresh config
 unbind r
 bind r source-file ~/.tmux.conf
