--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -69,6 +69,9 @@ bind -n M-0 select-window -t 10
 bind -n M-Tab next-window
 bind -n M-~ previous-window
 
+# toggle sync mode using alt-ctrl-space
+bind -n M-C-Space setw synchronize-panes
+
 # refresh config
 unbind r
 bind r source-file ~/.tmux.conf
