Matching background colors on tmux and nvim inactive panes

--- a/stow/tmux/.tmux/tmux-gruvbox-dark.conf
+++ b/stow/tmux/.tmux/tmux-gruvbox-dark.conf
@@ -48,7 +48,7 @@ set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,n
 set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
 
 # for non active tmux window
-set-window-option -g window-style bg=colour237
+set-window-option -g window-style bg=gray26 # #424242 - matches nvim non active window bg in options.lua
 
 # Initialize TMUX plugin manager for dark-notify trigger to make plugins work with dark/light themes
 run '~/.tmux/plugins/tpm/tpm'
