--- a/stow/ghostty/.config/ghostty/config
+++ b/stow/ghostty/.config/ghostty/config
@@ -22,9 +22,11 @@ keybind = super+i=inspector:toggle
 keybind = super+b=jump_to_prompt:-1
 keybind = super+n=jump_to_prompt:1
 
-# rebind ctrl+shift+tab to option+~
+# bind ctrl+shift+tab to option+~
 keybind = ctrl+shift+tab=text:\x1b~
-# rebind ctrl+tab to alt+tab
+# bind ctrl+tab to alt+tab
 keybind = ctrl+tab=text:\x1b\x09
+# bind cmd+s to ctrl+s
+keybind = super+s=text:\x13
 
 confirm-close-surface = false
