--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -4,6 +4,11 @@ set -g default-terminal "screen-256color"
 # TERM Color mode (Needs to match $TERM in ~/.zshrc)
 set-option -a terminal-features ",${TERM}:RGB"
 
+# https://yazi-rs.github.io/docs/image-preview/#tmux
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 # unbind-key C-b              # free the original bind-key key
 # set-option -g prefix C-a    # setting the prefix from C-b to C-a
 # bind-key C-a send-prefix    # ensure that we can send Ctrl-A to other apps or the shell that your interacting
