--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -40,8 +40,10 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind -T copy-mode-vi C-v send -X begin-selection \; send -X rectangle-toggle
 # copy text with "y" and exit copy mode
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
-# exit copy mode with "ESC"
-bind-key -T copy-mode-vi Escape send -X cancel
+# clear selection with "ESC"
+bind-key -T copy-mode-vi Escape send -X clear-selection
+# exit copy mode with "q", CTRL-C is also working
+bind-key -T copy-mode-vi q send -X cancel
 # don't exit copy mode after dragging with mouse
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
