--- a/stow/ghostty/.config/ghostty/config
+++ b/stow/ghostty/.config/ghostty/config
@@ -21,5 +21,11 @@ keybind = super+r=reload_config
 keybind = super+i=inspector:toggle
 keybind = super+b=jump_to_prompt:-1
 keybind = super+n=jump_to_prompt:1
+# bind ctrl+shift+tab to option+~
+keybind = ctrl+shift+tab=text:\x1b~
+# bind ctrl+tab to alt+tab
+keybind = ctrl+tab=text:\x1b\x09
+# bind cmd+s to ctrl+s
+keybind = super+s=text:\x13
 
 confirm-close-surface = false
