setting weather location

--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -167,6 +167,7 @@ set -g @plugin 'roosta/tmux-fuzzback'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'xamut/tmux-weather'
 set-option -g @tmux-weather-format "%c+%t+%w"
+set-option -g @tmux-weather-location "Toronto"
 
 # dark-notify themes
 set -g @plugin 'erikw/tmux-dark-notify'
