--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -165,9 +165,9 @@ set -g @plugin 'roosta/tmux-fuzzback'
 
 # mode indicator used in the theme
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
-set -g @plugin 'xamut/tmux-weather'
-set-option -g @tmux-weather-format "%c+%t+%w"
-set-option -g @tmux-weather-location "Toronto"
+# set -g @plugin 'xamut/tmux-weather'
+# set-option -g @tmux-weather-format "%c+%t+%w"
+# set-option -g @tmux-weather-location "Toronto"
 
 # dark-notify themes
 set -g @plugin 'erikw/tmux-dark-notify'
