--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,7 @@
 # Themes
 theme = dark:GruvboxDark,light:Builtin Light
-font-family = Hack Nerd Font Mono Regular
+# brew install --cask font-jetbrains-mono-nerd-font
+font-family = JetBrainsMono Nerd Font Propo
 minimum-contrast = 1.1
 font-thicken = 1
 font-size = 16
