--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,6 +31,8 @@ set -g history-limit 1000000
 
 # bind ctrl-b followed space to enter copy mode
 bind space copy-mode
+# bind ctrl-b followed by X to close window (same as default prefix + &)
+bind X kill-window
 
 # enable VI mode
 set-window-option -g mode-keys vi
