VI mode indicators

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -129,16 +129,16 @@ bind-key -T copy-mode-vi M-l resize-pane -R 4
 # fancy output selector
 # bind-key S-C-Up copy-mode\;\
 #            send-keys -X start-of-line\;\
-#            send-keys -X search-backward "󰇙"
+#            send-keys -X search-backward ""
 bind-key b copy-mode \; \
     send-keys -X clear-selection \; \
     send-keys -X cursor-up \; \
     send-keys -X start-of-line \; \
-    send-keys -X search-backward "󰇙" \; \
+    send-keys -X search-backward "" \; \
     send-keys -X cursor-down \; \
     send-keys -X start-of-line \; \
     send-keys -X begin-selection \; \
-    send-keys -X search-forward "󰇙" \; \
+    send-keys -X search-forward "" \; \
     send-keys -X cursor-up \; \
     send-keys -X cursor-up \; \
     send-keys -X end-of-line \; \
